# krost

./: Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  main.py  pyproject.toml
app/: article.py  challenge.py
static/css/: article.css  base.css  edit.css  index.css
static/js/: ai-tools.js  ai.js  article.js  auth.js  edit.js  post.js
templates/: article.html  base.html  edit.html  index.html
test/: navigator-auth.html
utils/: env_validator.py  ormconfig.py
